// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Progress Step Indicator Matches snapshot with 3 steps and a title 1`] = `
Array [
  <Row
    noGutters={false}
  >
    <div
      className="row"
    >
      <Col>
        <div
          className="col"
        >
          <h2
            className="jsx-2298047210"
          >
            This is a TEST TITLE
          </h2>
        </div>
      </Col>
    </div>
  </Row>,
  <br
    className="jsx-2298047210"
  />,
  <div
    className="jsx-2298047210 progress ml-1 mr-1"
  >
    <div
      aria-label="progress-step-indicator"
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={0}
      className="jsx-2298047210 progress-bar"
      role="progressbar"
      style={
        Object {
          "width": "0%",
        }
      }
    />
  </div>,
  <div
    className="jsx-2298047210 d-flex flex-row justify-content-between mb-3"
  >
    Array [
      <div
        className="jsx-1375059393 numberedCircle badge-success"
      >
        99
      </div>,
      "",
    ]
    Array [
      <div
        className="jsx-1375059393 numberedCircle badge-success"
      >
        100
      </div>,
      "",
    ]
    Array [
      <div
        className="jsx-1375059393 numberedCircle badge-danger"
      >
        110
      </div>,
      "",
    ]
  </div>,
  <Row
    noGutters={false}
  >
    <div
      className="row"
    >
      <Col
        className="stepDescription"
        key="description-99"
      >
        <div
          className="stepDescription col"
        >
          test step 1
        </div>
      </Col>
      <Col
        className="stepDescription"
        key="description-100"
      >
        <div
          className="stepDescription col"
        >
          test step 2
        </div>
      </Col>
      <Col
        className="stepDescription"
        key="description-110"
      >
        <div
          className="stepDescription col"
        >
          test step 3
        </div>
      </Col>
    </div>
  </Row>,
  "",
]
`;

exports[`The Progress Step Indicator Renders with no steps 1`] = `
Array [
  <br
    className="jsx-2298047210"
  />,
  <div
    className="jsx-2298047210 progress ml-1 mr-1"
  >
    <div
      aria-label="progress-step-indicator"
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={0}
      className="jsx-2298047210 progress-bar"
      role="progressbar"
      style={
        Object {
          "width": "0%",
        }
      }
    />
  </div>,
  <div
    className="jsx-2298047210 d-flex flex-row justify-content-between mb-3"
  />,
  <Row
    noGutters={false}
  >
    <div
      className="row"
    />
  </Row>,
  "",
]
`;
